# kaggle_house_compet

./: .gitignore  README.md  catboost_model.pkl  formulatedtest_1.csv  index3.ipynb  index4.ipynb  lasso_model.pkl  main.py  optimized_regressor_model.pkl  pyproject.toml  submission_10.csv  submission_12.csv  submission_13.csv  submission_14.csv  submission_15.csv  submission_7.csv  submission_8.csv  submission_9.csv  xgb_model.pkl
data/: submission.csv
